# pruebaGit

./: README.md  init.py  pyproject.toml
scripts/: data.py
