[tool.poetry]
name = "firstcommit"
version = "0.1.0"
description = "trabajo con versiones"
authors = ["frank927 <garciafrank927@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
requests = "2.28.2"
beautifulsoup4 = "4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
